Add per-map permissions management for users
